--- a/Education.html
+++ b/Education.html
@@ -154,7 +154,7 @@
                 <a target="_blank" href="https://drive.google.com/file/d/11Hbc2xSZDV6Dms9Z6fsznTSl2jvGGygn/view?usp=sharing">
                     <div class="card mb-4 box-shadow">
                         <img class="card-img-top"
-                            src="C:\Users\Yeshwanth Chowdary\OneDrive\Desktop\Interactive-Portfolio-master\Interactive-Portfolio-master\Image\Coincent.jpg"
+                            src="Image/Coincent.jpg"
                             alt="Card image cap">
                         <div class="card-body">
                             <p class="card-text certificate-text">Internship Completion Certificate</p>
